Fixed WindowMapEditior and add new projection functions from WGS84 to screen coordinates and reverse.
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@12312 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: 2b782ac5f9c9e2dccb062ef0807b0a697e25c140